feat: get basic hashing to work, refactor code to insert hashed scripts into head where possible, bug fixes

--- a/src/_includes/layouts/author.njk
+++ b/src/_includes/layouts/author.njk
@@ -21,6 +21,10 @@
     </main>
 {% endblock %}
 
+{% block headScripts %}
+    <script defer src="{% cacheBuster '/assets/js/pagination.js' %}"></script>
+{% endblock %}
+
 {% block seo %}
     {# Facebook OpenGraph #}
     <meta property="og:site_name" content="{{ site.title }}">
