--- a/src/_includes/layouts/post.njk
+++ b/src/_includes/layouts/post.njk
@@ -54,7 +54,7 @@
                     {% endif %}
 
                     {# Conditionally include partials based on Ghost language setting #}
-                    {% ifAsync site.lang == "zh" or site.lang == "zh-cn" %}
+                    {% ifAsync site.lang == "zh" %}
                         {% include "partials/learn-cta-row.njk" %}
                         {% include "partials/comments.njk" %}
                     {% else %}
@@ -67,9 +67,9 @@
     </main>
 {% endblock %}
 
-{% block scripts %}
+{% block headScripts %}
+    <script defer src="{% cacheBuster '/assets/js/fitvids.js' %}"></script>
     {% set js %}
-        {% include "assets/js/fitvids.js" %}
         document.addEventListener('DOMContentLoaded', () => {
             const postContent = document.querySelector('.post-full-content');
             if (postContent) fitVids(postContent);
