--- a/src/index.njk
+++ b/src/index.njk
@@ -26,11 +26,9 @@ pagination:
     </main>
 {% endblock %}
 
-{% block scripts %}
-    {% set js %}
-        {% include "assets/js/time-ago.js" %}
-    {% endset %}
-    <script>{{ js | jsMin | safe }}</script>
+{% block headScripts %}
+    <script defer src="{% cacheBuster '/assets/js/time-ago.js' %}"></script>
+    <script defer src="{% cacheBuster '/assets/js/pagination.js' %}"></script>
 {% endblock %}
 
 {% block jsonLd %}
