--- a/src/search-results.njk
+++ b/src/search-results.njk
@@ -18,10 +18,13 @@ permalink: '/search/'
     </main>
 {% endblock %}
 
+{% block headScripts %}
+    <script defer src="{% cacheBuster '/assets/js/published-date.js' %}"></script>
+{% endblock %}
+
 {% block scripts %}
     {% set js %}
         {% include "assets/js/search-results.js" %}
-        {% include "assets/js/published-date.js" %}
     {% endset %}
     <script>{{ js | jsMin | safe }}</script>
 {% endblock %}
