--- a/src/_includes/partials/pagination.njk
+++ b/src/_includes/partials/pagination.njk
@@ -4,4 +4,9 @@
     <div class="read-more-row">
         <button id="readMoreBtn">{% t 'buttons.load-more-articles' %}</button>
     </div>
+
+    {% set js %}
+        {% include "assets/js/pagination.js" %}
+    {% endset %}
+    <script>{{ js | jsMin | safe }}</script>
 {% endif %}
