--- a/src/_includes/layouts/default.njk
+++ b/src/_includes/layouts/default.njk
@@ -44,7 +44,12 @@
         <meta name="keywords" content="{% t 'meta:keywords' %}">
         <meta name="description" content="{% block description %}{% t 'meta:description' %}{% endblock %}">
         <link rel="icon" href="https://cdn.freecodecamp.org/universal/favicons/favicon.ico" type="image/png">
-        <link rel="canonical" href="{{ site.url }}">
+        {# Fall back to site URL if no canonical URL is set #}
+        {% if canonicalUrl %}
+            <link rel="canonical" href="{{ canonicalUrl }}">
+        {% else %}
+            <link rel="canonical" href="{{ site.url }}">
+        {% endif %}
         <meta name="referrer" content="no-referrer-when-downgrade">
 
         {% set nextPageRegExp = r/\/\d+\/$/g %}
