feat: cache busting (#18)
* feat: get basic hashing to work, refactor code to insert hashed scripts into head where possible, bug fixes

* fix: revert pagination script to inline to prevent possible console errors

* fix: simplify caching with filename method, remove caching plugin

--- a/src/index.njk
+++ b/src/index.njk
@@ -26,11 +26,8 @@ pagination:
     </main>
 {% endblock %}
 
-{% block scripts %}
-    {% set js %}
-        {% include "assets/js/time-ago.js" %}
-    {% endset %}
-    <script>{{ js | jsMin | safe }}</script>
+{% block headScripts %}
+    <script defer src="{% cacheBuster '/assets/js/time-ago.js' %}"></script>
 {% endblock %}
 
 {% block jsonLd %}
