--- a/src/_includes/partials/byline.njk
+++ b/src/_includes/partials/byline.njk
@@ -3,10 +3,11 @@
         {% 
             image
             post.primary_author.profile_image,
-            "author-profile-image",
+            "author-profile-image lazyload",
             post.primary_author.name,
             "60px",
-            [60]
+            [60],
+            1
         %}
     {% else %}
         <span class="avatar-wrapper">{% include "partials/icons/avatar.njk" %}</span>
