--- a/src/_includes/layouts/feed.njk
+++ b/src/_includes/layouts/feed.njk
@@ -1,6 +1,3 @@
----
-permalink: rss.xml
----
 <rss xmlns:dc="http://purl.org/dc/elements/1.1/" xmlns:content="http://purl.org/rss/1.0/modules/content/"
     xmlns:atom="http://www.w3.org/2005/Atom" xmlns:media="http://search.yahoo.com/mrss/" version="2.0">
     <channel>
@@ -20,7 +17,7 @@ permalink: rss.xml
         <lastBuildDate>{% buildDateFormatter site.timezone %}</lastBuildDate>
         <atom:link href="{{ site.url }}" rel="self" type="application/rss+xml" />
         <ttl>60</ttl>
-        {% for post in ghost.posts.slice(0, 10) %}
+        {% for post in feed.posts.slice(0, 10) %}
             <item>
                 <title>
                     <![CDATA[ {% fullEscaper post.title %} ]]>
