--- a/src/amp-pages/amp-pages.njk
+++ b/src/amp-pages/amp-pages.njk
@@ -8,4 +8,4 @@ layout: 'layouts/amp.njk'
 permalink: '{{ post.path }}/amp/'
 ---
 
-{{ post.amp_html | safe if post.amp_html }}
+{{ post.amp.html | safe if post.amp.html }}
