fix: add feeds and amp pages to collection, filter out 404 pages returned by ghost api

--- a/src/amp-pages/amp-pages.njk
+++ b/src/amp-pages/amp-pages.njk
@@ -3,7 +3,7 @@ pagination:
   data: ghost.posts
   size: 1
   alias: post
-  addAllPagesToCollections: false
+  addAllPagesToCollections: ture
 layout: 'layouts/amp.njk'
 permalink: '{{ post.path }}/amp/'
 ---
