--- a/src/_includes/partials/card.njk
+++ b/src/_includes/partials/card.njk
@@ -66,7 +66,7 @@
                                     </a>
                                 {% endif %}
                                 <span class="meta-content">
-                                    <a class="meta-item" href="{{originalAuthor.url}}">{% t 'localization-meta.author', { authorName: originalAuthor.name } %} ({% t 'localization-meta.languages.en' %})</a>
+                                    <a class="meta-item" href="{{originalAuthor.url}}">{% t 'localization-meta.roles.author', { authorName: originalAuthor.name } %} ({% t 'localization-meta.languages.en' %})</a>
                                     <time class="meta-item" datetime="{{ post.original_post.published_at }}">{% timeAgo post.original_post.published_at %}</time>
                                 </span>
                             </li>
@@ -95,7 +95,7 @@
                             <span class="meta-content">
                                 <a class="meta-item" href="{{ post.primary_author.path }}">
                                     {% if post.original_post %}
-                                        {% t 'localization-meta.translator', { translatorName: post.primary_author.name } %}
+                                        {% t 'localization-meta.roles.translator', { translatorName: post.primary_author.name } %}
                                     {% else %}
                                         {{post.primary_author.name}}
                                     {% endif %}
