fix: simplify byline read more localization

--- a/src/_includes/partials/byline.njk
+++ b/src/_includes/partials/byline.njk
@@ -36,7 +36,7 @@
                     <p>{{ author.bio }}</p>
                 {% else %}
                     <p>
-                        {% t 'author.byline.read-more', { url: authorUrl, role: localizedRole } %}{% fullStopHandler siteLang %}
+                        {% t 'author.byline.read-more', { url: authorUrl, role: localizedRole } %}
                     </p>
                 {% endif %}
             {% endif %}
