feat: add pt br and it locales, other fixes (#33)
* feat: add pt translations

* feat: add it translations

* fix: update locale code handling and sample.env

* fix: rename i18n/locale directories, simplify locale code usage, load day js locale dynamically

* fix: algolia index setup

* fix: chinese term for translator

* feat: add portuguese and italian to translations.json

* fix: rework ghost API initialization, fix author / translator section for post card

* fix: update sample.env to new format

* fix: simplify byline read more localization

* fix: footer donation link in locale files

* fix: dynamic dayjs init for client

* fix: remove link from byline read more translations

* fix: remove full stop handler

--- a/src/_includes/layouts/default.njk
+++ b/src/_includes/layouts/default.njk
@@ -34,9 +34,8 @@
         <script defer src="https://cdn.freecodecamp.org/news-assets/dayjs/1.10.4/localizedFormat.min.js"></script>
         <script defer src="https://cdn.freecodecamp.org/news-assets/dayjs/1.10.4/relativeTime.min.js"></script>
 
-        {# Day.js locales #}
-        <script defer src="https://cdn.freecodecamp.org/news-assets/dayjs/1.10.4/locale/zh.min.js"></script>
-        <script defer src="https://cdn.freecodecamp.org/news-assets/dayjs/1.10.4/locale/es.min.js"></script>
+        {# Dynamically load Day.js locale #}
+        <script defer src="https://cdn.freecodecamp.org/news-assets/dayjs/1.10.4/locale/{{ site.lang }}.min.js"></script>
 
         {# Lazysizes #}
         <script defer type="text/javascript" src="{% cacheBuster '/assets/js/lazysizes.min.js' %}"></script>
