fix: simplify feed permalinks

--- a/src/feeds/feeds.njk
+++ b/src/feeds/feeds.njk
@@ -5,5 +5,5 @@ pagination:
   alias: feed
   addAllPagesToCollections: true
 layout: 'layouts/feed.njk'
-permalink: '{{ feed.path }}/{% if feed.page %}{{ feed.page }}/{% endif %}/rss.xml'
+permalink: '{{ feed.path }}/rss.xml'
 ---
