--- a/src/_includes/layouts/post.njk
+++ b/src/_includes/layouts/post.njk
@@ -6,6 +6,10 @@
 {% set codeinjection_head = post.codeinjection_head %}
 {% set codeinjection_foot = post.codeinjection_foot %}
 
+{% block prism %}
+    {% include "partials/prism.njk" %}
+{% endblock %}
+
 {% block content %}
     <main id="site-main" class="post-template site-main outer">
         <div class="inner">
