--- a/src/_includes/layouts/default.njk
+++ b/src/_includes/layouts/default.njk
@@ -57,11 +57,11 @@
         <meta name="keywords" content="{% t 'meta:keywords' %}">
         <meta name="description" content="{% block description %}{% t 'meta:description' %}{% endblock %}">
         <link rel="icon" href="{{ site.icon }}" type="image/png">
-        {# Fall back to site URL if no canonical URL is set #}
+        {# Fall back to site URL with trailing slash if no canonical URL is set #}
         {% if canonicalUrl %}
             <link rel="canonical" href="{{ canonicalUrl }}">
         {% else %}
-            <link rel="canonical" href="{{ site.url }}">
+            <link rel="canonical" href="{{ site.url + page.url }}">
         {% endif %}
         <meta name="referrer" content="no-referrer-when-downgrade">
 
@@ -76,7 +76,7 @@
             <meta property="og:type" content="website">
             <meta property="og:title" content="{{ site.title }}">
             <meta property="og:description" content="{% t 'meta:description' %}">
-            <meta property="og:url" content="{{site.url + page.url}}">
+            <meta property="og:url" content="{{ site.url + page.url }}">
             <meta property="og:image" content="{{ site.cover_image }}">
             <meta property="article:publisher" content="https://www.facebook.com/freecodecamp">
 
